--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ nav {
 }
 #filters h2 {
      font-size: 16px;
+     font-weight: 900;
 }
 
 #list_block {
@@ -282,7 +283,7 @@ nav {
 }
 
 #afficher_plus_block p {
-    margin: 10px 0 30px 2.7%;
+    margin: 10px 0 30px 3%;
     font-weight: 700;
     font-size: 16px;
 }
@@ -290,7 +291,7 @@ nav {
 .h2_hébergements_à_marseille {
     font-size: 19px;
     margin-top: 25px;
-    margin-left: 2.7%;
+    margin-left: 3%;
     margin-bottom: 25px;
     font-weight: 700;
 }
@@ -302,7 +303,6 @@ nav {
     height: 210px;
     margin-bottom: 2%;
     box-shadow: 4px 4px 6px rgb(224, 224, 224);
-    cursor: pointer;
 }
 
 .hébergements_card_img {
@@ -366,7 +366,8 @@ nav {
 .h2_hébergements_populaires {
     font-size: 19px;
     margin-top: 25px;
-    margin-left: 7%;
+    margin-left: 8%;
+    margin-bottom: 25px;
 }
 
 #populaires_results {
@@ -391,7 +392,6 @@ nav {
     width: 100%;
     height: 150px;
     margin-bottom: 5%;
-    cursor: pointer;
 }
 
 .populaires_description:hover {
@@ -412,7 +412,7 @@ nav {
 
 #icon_block {
     position: absolute;
-    right: 28px;
+    right: 20px;
     top: 28.5px;
 }
 
@@ -488,7 +488,6 @@ nav {
 #vieux_port:hover {
     transform: scale(1.02);
     transition: 200ms;
-    cursor: pointer;
 }
 
 #img_vieux_port {
@@ -509,7 +508,6 @@ nav {
 #pomègues:hover {
     transform: scale(1.02);
     transition: 200ms;
-    cursor: pointer;
 }
 
 #img_pomègues {
@@ -529,7 +527,6 @@ nav {
 #frioul:hover {
     transform: scale(1.02);
     transition: 200ms;
-    cursor: pointer;
 }
 
 #img_frioul {
@@ -549,7 +546,6 @@ nav {
 #calanques:hover{
     transform: scale(1.02);
     transition: 200ms;
-    cursor: pointer;
 }
 
 #img_calanques {
@@ -570,7 +566,6 @@ nav {
 #garde:hover {
     transform: scale(1.02);
     transition: 200ms;
-    cursor: pointer;
 }
 
 #img_garde {
@@ -590,7 +585,6 @@ nav {
 #longchamp:hover {
     transform: scale(1.02);
     transition: 200ms;
-    cursor: pointer;
 }
 
 #img_longchamp {
@@ -650,6 +644,7 @@ footer {
     nav {
         justify-content: center;
         height: max-content;
+        margin-bottom: 25px;
     }
 
     #logo {
@@ -679,7 +674,6 @@ footer {
 /* Responsive - Section 1 - Main title, Search bar, Filters, Info */
 
     #section1 {
-        border: 1px solid red;
         height: fit-content;
         text-align: center;
     }
@@ -687,12 +681,11 @@ footer {
     /* Responsive - Main title */
 
     #section1 h1 {
-        border: 1px solid black;
         font-size: 22px;
         font-weight: bolder;
         margin-bottom: 7px;
-        margin-left: 40px;
-        margin-right: 40px;
+        text-align: center;
+        margin: 0 30px 12px 30px;
     }
 
     /* Responsive - Search bar */
@@ -708,6 +701,7 @@ footer {
 
     #search {
         justify-content: center;
+        margin-top: 28px;
     }
 
     #search button {
@@ -716,7 +710,7 @@ footer {
 
     /* Responsive - Filters */
 
-    #title_filtres_block {
+    #title_filters_block {
         align-self: flex-start;
         margin-left: 35px;
     }
@@ -764,7 +758,7 @@ footer {
 
     .hebergements_description {
         width: 100%;
-        height: 200px;
+        height: fit-content;
         margin-bottom: 20px;
         display: flex;
         flex-direction: column;
@@ -779,12 +773,29 @@ footer {
         margin: 0;
     }
 
+    .hébergements_h3 {
+        margin-top: 0;
+        margin-left: 3%;
+        margin-bottom: 10px;
+    }
+
+    .hébergements_p {
+        margin-top: 0;
+        margin-left: 3%;
+        margin-bottom: 10px;
+    }
+
+    .hébergements_stars {
+        margin-top: 0;
+        margin-left: 3%;
+        margin-bottom: 15px;
+    }
+
     /* Responsive - Hébergements populaires */
 
     #populaires_results {
         order: 0;
         width: 100%;
-        align-items: center;
         border: none;
         border-radius: 0;
     }
