--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ nav {
     color: #c7c5c5;
 }
 
-.hebergements_description:hover {
+.hebergements_body_card:hover {
     transform: scale(1.02);
     transition: 200ms;
 }
