--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,11 @@ nav {
 #search button {
     padding: 0 18px;
     background-color: #0065FC;
-    color: #F2F2F2;
+    color: #FFFFFF;
     border-radius: 0 13px 13px 0;
     border: none;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 15px;
     cursor: pointer;
     opacity: 0.9;
     transition: transform 200ms;
