--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* General */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -13,16 +14,11 @@ img {
     object-fit: cover;
 }
 
-@font-face {
-    font-family: 'Raleway';
-    src: url('../Fonts/static/Raleway-Regular.ttf');   
-}
-
 #page_block {
     display: flex;
     flex-direction: column;
-    max-width: 1300px;
-    margin: auto;
+    margin: 0 5%;
+    min-width: 256px;
 }
 
 body {
@@ -599,7 +595,7 @@ nav {
 }
 
 .h3_activités {
-    font-size: 13.5px;
+    font-size: 15px;
     font-weight: bold;
     margin-left: 15px;
     margin-top: 8px;
